# MOTION2NX

./: .gitignore  README.md  error.txt
src/examples/: CMakeLists.txt
src/examples/aby-equality/: CMakeLists.txt  aby-equality.cpp
src/examples/andgate/: CMakeLists.txt
src/examples/approx_pm/: CMakeLists.txt  approx_pm.cpp
src/examples/approx_pm2/: CMakeLists.txt
src/examples/approximate_pm/: CMakeLists.txt  approximate_pm.cpp
src/examples/circuit_equality/: CMakeLists.txt  circuit_equality.cpp
src/examples/count/: CMakeLists.txt  count.cpp
src/examples/dot/: CMakeLists.txt  dot.cpp
src/examples/dpf_equality/: CMakeLists.txt  dpf_equality.cpp
src/examples/eqexp/: CMakeLists.txt  eqexp.cpp
src/examples/equality/: CMakeLists.txt  equality.cpp
src/examples/exact_npm/: CMakeLists.txt  exact_npm.cpp
src/examples/exact_pm/: CMakeLists.txt  exact_pm.cpp
src/examples/exact_pmo/: CMakeLists.txt  exact_pmo.cpp
src/examples/hamming/: CMakeLists.txt  hamming.cpp
src/examples/mult/: CMakeLists.txt  mult.cpp
src/examples/multni/: CMakeLists.txt  multni.cpp
src/examples/naive/: CMakeLists.txt  naive.cpp
src/examples/naive_approx_pm/: CMakeLists.txt  naive_approx_pm2.cpp
src/examples/naive_exact_pm/: CMakeLists.txt
src/examples/naive_wildcard_pm/: naive_wildcard_pm.cpp
src/examples/test_dpf/: CMakeLists.txt  test_dpf.cpp
src/examples/wildcard_npm/: CMakeLists.txt  wildcard_npm.cpp
src/examples/wildcard_pm/: CMakeLists.txt  wildcard_pm.cpp
src/examples/wildcard_pmo/: CMakeLists.txt  wildcard_pmo.cpp
src/motioncore/: CMakeLists.txt
(+1218 files in other folders)
